# diagram-ai-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/agents/: assistant_agent.py  base_agent.py  diagram_agent.py  langchain_assistant_agent.py  langchain_diagram_agent.py
app/api/: main.py
app/chains/: __init__.py  adjustment_chain.py  analysis_chain.py  critique_chain.py  intent_chain.py
app/core/: config.py  constants.py  error_handler.py  exceptions.py  execution_strategy.py  langchain_config.py  langchain_prompts.py  langgraph_config.py  langsmith_config.py  langsmith_metrics.py  llm.py  logging.py  prompts.py  schemas.py  structured.py
app/services/: assistant_service.py  diagram_service.py  langgraph_diagram_service.py
app/utils/: cleanup.py  files.py  timing.py
app/workflows/: __init__.py  diagram_workflow.py  human_review.py  routing.py  state.py  streaming.py
app/workflows/nodes/: __init__.py  adjust.py  analysis.py  critique.py  finalize.py  render.py  utils.py
tests/: test_api.py  test_diagram_critique_optional.py  test_structured_optional.py
tests/workflows/: test_langgraph_service.py  test_workflow_compatibility.py  test_workflow_nodes.py
